# Sigma_Backtest_Tester

./: .gitignore  .pre-commit-config.yaml  APP_FEATURES_DOCUMENTATION.md  BACKTEST_LOGIC_DOCUMENTATION.md  DEPLOYMENT_STEPS.md  EXTENSIONS_RECOMMENDATIONS.md  README.md  SECURITY.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TP_SL_LOGIC_EXPLANATION.md  backtest_TQQQ_20200101_20251106.csv  backtest_TQQQ_20250123_20251106.csv  check_modes.py  pyproject.toml  requirements.txt  run_dev.ps1  scratch_run.py  streamlit_app.py  test_settings.py
.github/workflows/: ci.yml
.presets/: 2.json  3.json  4.json
.streamlit/: config.toml
app/: main.py
app/.streamlit/: config.toml  secrets.toml.example
docs/: deployment.md  getting-started.md
results/: optimization_results_IS.csv  optimization_results_OS.csv
src/: cli.py  config.py  gui_streamlit.py
src/backtest/: __init__.py  engine.py  engine_v2.py  metrics.py
src/data/: __init__.py  alpha_vantage.py  base.py  cache.py  yfin.py
src/data/providers/: __init__.py  alpha_vantage.py  yfin.py
src/optimization/: __init__.py  grid_search.py
src/storage/: __init__.py  presets.py
src/strategy/: __init__.py  dip_buy.py
src/tests/: test_backtest_engine.py  test_baseline_reset.py  test_engine_minicase.py  test_invariants.py  test_metrics_mdd.py  test_tp_sl_baseline.py
src/visualization/: __init__.py  heatmap.py
tests/: __init__.py  conftest.py
tools/: dev_setup.bat  scratch_run.py  setup.sh
