[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "normal-dip-bt"
version = "0.1.0"
description = "Backtesting CLI for buying dips with weekly contribution budgeting"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "ndbt", email = "dev@example.com" }]
dependencies = [
  "pandas>=1.5,<3.0",
  "numpy>=1.24,<3.0",
  "yfinance>=0.2.40",
  "typer>=0.12.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "matplotlib>=3.7.0",
  "scipy>=1.10.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
gui = [
  "streamlit>=1.32.0",
  "plotly>=5.18.0",
  "streamlit-aggrid>=0.3.4",
  "streamlit-option-menu>=0.3.12",
  "altair>=5.2.0",
]
advanced = [
  "pandas-ta>=0.3.14b",
  "quantstats>=0.0.62",
  "riskfolio-lib>=5.0.0",
  "yfinance-cache>=0.1.5",
]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.8",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "loguru>=0.7.2",
  "pip-audit>=2.6.0",
  "safety>=2.3.0",
]
all = [
  "normal-dip-bt[gui,advanced,dev]",
]

[project.scripts]
ndbt = "src.cli:app"

[tool.setuptools]
packages = ["src"]
package-dir = {"src" = "src"}


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501", "E402"]  # E402: Module level import not at top of file (needed for Streamlit)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

